--- a/24.html
+++ b/24.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="cat">
+    <head>
+        <meta charset="uft-8">
+        <title>EXERCICI GIT</title>
+        <link rel="stylesheet" type="text/css" href="24.css">
+    </head>
 <body>
 <table border="1">
     <caption>Taula de Colors</caption>
         <tbody>
           <tr>
-            <td>Vermell</td>
-            <td>Groc</td>
+            <td class="v">Vermell</td>
+            <td class="g">Groc</td>
           </tr>
 </body>   
