--- a/24.html
+++ b/24.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="24.css">
     </head>
 <body>
+<h1>Git24</h1>
 <table border="1">
     <caption>Taula de Colors</caption>
         <tbody>
